# data-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  feature_registry.yaml  pyproject.toml  pytest.ini
.github/workflows/: bq-migrate.yaml  bronze-writer-deploy.yaml  ci-migrations.yaml  composer-deploy-dags.yaml  composer-health-check.yaml  db-migrate.yaml  docker-build.yaml  feature-worker-deploy.yaml  integration-tests.yaml  main-workflow.yaml  pipeline-steps.yaml  postgres-docker-build.yaml  scraper-api-deploy.yaml  test-embeddings.yaml  thumbnail-worker-deploy.yaml  typesense-daily-load.yaml  typesense-docker-build.yaml  typesense-full-reload.yaml  typesense-maintenance-sync.yaml  typesense-schema-update.yaml  typesense-sync-worker-deploy.yaml
_analysis/: composer_recreation_issue.md
_plan/: AUTORESEARCH-TREND-DETECTION.md  BACKFILL-ENTIDADES-ORQUESTRACAO.md  CHECKLIST.md  COMPOSER_RESILIENCE_PLAN.md  CONTEXT.md  DATA-ARCHITECTURE-EVOLUTION.md  DECISIONS.md  DEPLOY_READABLE_UNIQUE_ID.md  EVENT-DRIVEN-ARCHITECTURE.md  EXTRAIR-SCRAPER-REPO.md  FASE6-PROJECAO-GRAFO-ENTIDADES-NEO4J.md  INDEX.md  MIGRAR-SCRAPER-AIRFLOW.md  PLAN-data-publishing-migration.md  POSTGRES_TEST_PLAN.md  PROGRESS.md  README.md  SCRAPER-CLOUD-RUN-API.md  THUMBNAIL-WORKER.md  TREND-DETECTION-PRODUCAO.md  TYPESENSE_MIGRATION.md  VERIFY-NEWS-INTEGRITY.md  append-via-parquet.md  dynamic-dags-bucket.md  fix-parquet-schema-mismatch.md
_plan/DAG_PG_TO_HF_DATASET/: README.md
_plan/HF_TO_PG_MIGRATION/: FASE_4_7.md  SCHEMA.md
_plan/TS_SYNC_MOVED_TO_MAIN_WORKFL/: COMMIT_BEFORE_TS_SYNC_CHANGES.txt  TS_SYNC_EXECUTION_LOG.md  TS_SYNC_MOVED_TO_MAIN_WORKFL.md  TS_SYNC_QUICK_REFERENCE.md  TS_SYNC_README.md  TS_SYNC_ROLLBACK.md
_plan/TYPESENSE_REPO_MIGRATION/: CHECKLIST.md  CONTEXT.md  DECISIONS.md  PLAN.md  README.md
_plan/mauricio/: 23-fix-editorial-lead-ebc-scraper.md
airflow/: .env.example  requirements.txt
docker/: README.md
docker/bronze-writer/: Dockerfile
docker/feature-worker/: Dockerfile
docker/postgres/: init.sql
docker/scraper-api/: Dockerfile
docker/thumbnail-worker/: Dockerfile
docker/typesense/: Dockerfile  entrypoint.sh
docker/typesense-sync-worker/: Dockerfile
docs/: README.md
docs/architecture/: decentralized-dags.md  feature-registry.md  overview.md
docs/dags/: README.md
docs/database/: migrations.md  schema.md
docs/development/: docker-setup.md  postgres-manager.md  setup.md
docs/migration/: performance-optimization.md
docs/runbooks/: composer-recovery.md  migration-rollback.md
docs/typesense/: README.md  data-management.md  development.md  setup.md
docs/workers/: README.md
research/trend-detection/: .env.example  .gitignore  evaluate.py  program.md  requirements.txt  scorer.py  signals.py
scripts/: apply_prod_migrations.py  backfill_bq_20260520.py  backfill_embeddings.sh  backfill_features_window.py  bq_migrate.py  create_schema.sql  manual_check_postgres.py  migrate.py  migrate_hf_to_postgres.py  migrate_unique_ids.py  populate_agencies.py  populate_themes.py  recreate_indexes_after_migration.py  setup_database.sh  setup_local_db.sh  sync_embeddings_to_prod.py  sync_prod_to_local.py  sync_prod_to_typesense.py  validate_migration.py
scripts/bigquery/: create_pageviews.sql  create_tables.sql  create_umami_tables.sql
scripts/embeddings-migration/: QUICKSTART.md  README.md  csv_to_parquet.py  dump_articles_for_migration.sql  migrate_to_bge_m3.py  requirements.txt  setup_local_test.sh  test_local.sh
scripts/migrations/: 001_add_pgvector_extension.sql  002_add_embedding_column.sql  003_create_embedding_index.sql  004_add_bge_m3_columns.sql  004_create_news_features.sql  004_create_news_features_rollback.sql  004_rollback.sql  005_alter_unique_id_varchar.sql  005_alter_unique_id_varchar_rollback.sql  006_migrate_unique_ids.py  007_create_idx_news_video_no_image.sql  007_create_idx_news_video_no_image_rollback.sql  008_create_scrape_runs.sql  008_create_scrape_runs_rollback.sql  009_add_content_hash_and_url_index.sql  009_add_content_hash_and_url_index_rollback.sql  010_backfill_content_hash.py  011_cleanup_url_duplicates.py  012_add_url_unique_index.sql  012_add_url_unique_index_rollback.sql  013_add_summary_moderation.sql  013_add_summary_moderation_ROLLBACK.sql  013_nullify_relative_image_urls.sql  013_nullify_relative_image_urls_rollback.sql  014_nullify_disallowed_image_urls.sql  014_nullify_disallowed_image_urls_rollback.sql  015_create_entity_registry.sql  015_create_entity_registry_rollback.sql  016_create_entity_alias.sql  016_create_entity_alias_rollback.sql  017_seed_entity_registry_from_agencies.py  018_index_features_canonical.sql  018_index_features_canonical_rollback.sql  019_create_news_llm_raw.sql  019_create_news_llm_raw_rollback.sql  020_create_entity_registry_seen.sql  020_create_entity_registry_seen_rollback.sql  021_create_news_entities.sql  021_create_news_entities_rollback.sql  022_create_entity_edges.sql  (+11 more)
scripts/scraper_errors_analysis/: README.md  analyze_errors.py  collect_logs.py
scripts/seeds/: policy_gazetteer.csv
src/data_platform/: api.py  cli.py  config.py
test-data/: agencies.yaml
tests/: README.md  conftest.py
tests/dags/: test_bigquery_sync_graphql.py  test_clusters_graphql.py  test_engagement_graphql.py  test_trending_graphql.py
tests/integration/: README.md  conftest.py  test_bq_migrate_integration.py  test_ebc_scraper_live.py  test_embedding_workflow.py  test_features_integration.py  test_full_pipeline.py  test_migrate_integration.py  test_postgres_integration.py  test_typesense_e2e_integration.py  test_typesense_query_integration.py
tests/regression/: test_d1.py
tests/scripts/: conftest.py  test_migrate_runner.py  test_migrate_unique_ids.py  test_migration_006.py  test_seed_entity_registry.py
(+151 files in other folders)
